[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sword.gd" type="Script" id=1]
[ext_resource path="res://art/Request pack/Tiles/swordSilver.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.1968
height = 23.429

[sub_resource type="Animation" id=2]
resource_name = "sword_swing"
length = 0.39
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 41.2, 146.4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6.89966, -9.60005 ), Vector2( 8.9, 11.234 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D/SwordSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Sword" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.9, 11.234 )
rotation = 2.55516
shape = SubResource( 1 )
disabled = true

[node name="SwordSprite" type="Sprite" parent="CollisionShape2D"]
visible = false
scale = Vector2( 0.492006, 0.849787 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/sword_swing = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Weapon_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
